// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VButton Default render. Snapshot test 1`] = `
<input
  className="sc-AxjAm kxmMId input_text "
  type="text"
/>
`;

exports[`VButton Rendering with props. Snapshot test 1`] = `
<input
  className="sc-AxirZ fbSlPi input_text some_classname"
  type="text"
/>
`;
